--- a/homework/homework.vcxproj.filters
+++ b/homework/homework.vcxproj.filters
@@ -15,19 +15,25 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="source_code\shortestpath.cpp">
+    <ClInclude Include="edge.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="node.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="my_function.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="head.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="shortestpath.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="my_function.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="source_code\edge.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="source_code\node.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
